Fix spacing between project categories

--- a/p1_cs2300/css/stylesheet.css
+++ b/p1_cs2300/css/stylesheet.css
@@ -379,7 +379,7 @@ ul {
 }
 
 .projects-category {
-	margin: 1.16% 1.16%;
+	margin: 15px auto;
 	width: 26.5vw;
 	height: 26.5vw;
 	border-radius: 10px;
